style: update content min-height to stop overflow when no content

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,7 +21,7 @@ h1, h2, h3 ,h4, h5 {
 }
 
 #content {
-    min-height: calc(100vh - 340px)
+    min-height: calc(100vh - 388px)
 }
 
 .vertical-center {
